smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/metadata/no-newline-after-metadata.smithy
// Syntax error at line 3, column 22: Expected a line break, but found IDENTIFIER('metadata') | Model
$version: "2.0"
metadata foo = "bar" metadata baz = "bar"
